# weather_data_fetcher_service

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  env-sample  main.py  pyproject.toml
resources/: appendix.json
tests/: test_open_weather_api_service.py  test_weather_data_process.py
weather_data_fetcher_service/core/: __init__.py  constants.py  logger.py  settings.py
weather_data_fetcher_service/core/models/: weather_data_models.py
weather_data_fetcher_service/core/repositories/: base_repository.py  redis_repository.py
weather_data_fetcher_service/process/: base_process.py  weather_data_process.py
weather_data_fetcher_service/rest/: middlewares.py  parameters.py  routes.py  views.py
weather_data_fetcher_service/services/: base_weather_api_service.py  open_weather_api_service.py
